[tool.poetry]
name = "My Scraper"
version = "0.1.0"
description = "personal scraper"
authors = ["Marcus <marcusbackendorf@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
yfinance = "^0.1.55"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
